FACES-1901 Develop aui:tab and aui:tabView components (removed last Liferay benefit to give a total of 5 which fits better in the browser)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/tabview/general/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/tabview/general/tabView.xhtml
@@ -10,7 +10,7 @@
 		<aui:tab label="Enterprise Ready">
 			<h:graphicImage library="images" name="enterprise.png" />
 			<h4>Enterprise Ready</h4>
-			<span>Liferay is designed for scalability, reliablity, and high performance— both on-premise and in the cloud.</span>
+			<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the cloud.</span>
 		</aui:tab>
 		<aui:tab label="Powerful Integration">
 			<h:graphicImage library="images" name="integration.png" />
@@ -26,11 +26,6 @@
 			<h:graphicImage library="images" name="open-source.png" />
 			<h4>Built With Open Source</h4>
 			<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
-		</aui:tab>
-		<aui:tab label="Complete Platform">
-			<h:graphicImage library="images" name="platform.png" />
-			<h4>A Complete Platform</h4>
-			<span>With content, collaboration and portal features, your solutions require minimal customization.</span>
 		</aui:tab>
 	</aui:tabView>
 </ui:composition>
