after Jalopy and formatting

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/rating/data-model/rating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/rating/data-model/rating.xhtml
@@ -11,7 +11,7 @@
 				itemValue="#{benefit.id}" itemLabel="#{benefit.label}" />
 		</aui:starRating>
 		<br />
-		<h:outputText value="#{i18n['you-selected']}: " />
+		<h:outputText value="#{i18n['model-value']}: " />
 		<h:outputText id="updatedFavorite" value="#{ratingModelBean.favoriteId}" />
 		<br />
 		<br />
