--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
@@ -5,52 +5,60 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:c="http://java.sun.com/jsp/jstl/core" 
-	template="/templates/component-1col.xhtml" >
-	
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	template="/templates/component-2col.xhtml">
+
 	<ui:define name="col1">
-	<h:form>
-		<showcase:componentRenderedCheckbox />
-		<showcase:componentRequiredCheckbox />
-		<aui-nongen:field label="#{i18n['component']}">
-		<aui:starRating id="starRating" rendered="#{showcaseModelBean.selectedComponent.rendered}"
-			required="#{showcaseModelBean.selectedComponent.required}" 
-			value="#{ratingModelBean.favoriteId}" label="Liferay Faces Alloy, in general, is: ">
-			<f:converter converterId="javax.faces.Long" />
-			<f:selectItem itemLabel="Compatible" itemValue="10" />
-			<f:selectItem itemLabel="Enterprise Ready" itemValue="20" />
-			<f:selectItem itemLabel="Powerful Integration" itemValue="30" />
-			<f:selectItem itemLabel="Lightweight" itemValue="40" />
-			<f:selectItem itemLabel="Open Source" itemValue="50" />
-			<f:selectItem itemLabel="Complete Platform" itemValue="60" />
-		</aui:starRating>
-		<h:message for="starRating" />
-		</aui-nongen:field>
-		<aui-nongen:field label="#{i18n['model-value']}">
-			<pre>#{ratingModelBean.favoriteId}</pre>
-		</aui-nongen:field>
-		<br />
-		<br />
-		
-		<aui:starRating defaultSelected="3" value="#{ratingModelBean.favorite}"
-			label="Liferay Faces Alloy, by default, is: ">
-			<f:selectItem itemLabel="Compatible" itemValue="Compatible" />
-			<f:selectItem itemLabel="Enterprise Ready" itemValue="Enterprise Ready" />
-			<f:selectItem itemLabel="Powerful Integration" itemValue="Powerful Integration" />
-			<f:selectItem itemLabel="Lightweight" itemValue="Lightweight" />
-			<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
-			<f:selectItem itemLabel="Complete Platform" itemValue="Complete Platform" />
-		</aui:starRating>
-		<br /><br />
-		<h:outputText value="#{i18n['model-value']}: " />
-		<h:outputText value="#{ratingModelBean.favorite}" />
-		<br />
-		<br />
-		
-		<h:commandButton value="Submit">
-			<f:ajax execute="@form" render="@form" />
-		</h:commandButton>
-		
-	</h:form>
+		<h:form>
+			<showcase:componentRenderedCheckbox />
+			<showcase:componentRequiredCheckbox />
+			<aui-nongen:field label="#{i18n['component']}">
+				<aui:starRating id="starRating"
+					rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					required="#{showcaseModelBean.selectedComponent.required}"
+					value="#{ratingModelBean.favoriteId}"
+					label="Liferay Faces Alloy, in general, is: ">
+					<f:converter converterId="javax.faces.Long" />
+					<f:selectItem itemLabel="Compatible" itemValue="10" />
+					<f:selectItem itemLabel="Enterprise Ready" itemValue="20" />
+					<f:selectItem itemLabel="Powerful Integration" itemValue="30" />
+					<f:selectItem itemLabel="Lightweight" itemValue="40" />
+					<f:selectItem itemLabel="Open Source" itemValue="50" />
+					<f:selectItem itemLabel="Complete Platform" itemValue="60" />
+				</aui:starRating>
+				<h:message for="starRating" />
+			</aui-nongen:field>
+			<h:commandButton value="Submit">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<aui-nongen:field label="#{i18n['model-value']}">
+				<pre>#{ratingModelBean.favoriteId}</pre>
+			</aui-nongen:field>
+		</h:form>
+	</ui:define>
+	<ui:define name="col2">
+		<h:form>
+			<aui-nongen:field label="#{i18n['component']}">
+				<aui:starRating defaultSelected="3"
+					value="#{ratingModelBean.favorite}"
+					label="Liferay Faces Alloy, by default, is: ">
+					<f:selectItem itemLabel="Compatible" itemValue="Compatible" />
+					<f:selectItem itemLabel="Enterprise Ready"
+						itemValue="Enterprise Ready" />
+					<f:selectItem itemLabel="Powerful Integration"
+						itemValue="Powerful Integration" />
+					<f:selectItem itemLabel="Lightweight" itemValue="Lightweight" />
+					<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
+					<f:selectItem itemLabel="Complete Platform"
+						itemValue="Complete Platform" />
+				</aui:starRating>
+			</aui-nongen:field>
+			<h:commandButton value="Submit">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<aui-nongen:field label="#{i18n['model-value']}">
+				<pre>#{ratingModelBean.favorite}</pre>
+			</aui-nongen:field>
+		</h:form>
 	</ui:define>
 </ui:composition>
