--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/thumbrating/general/thumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/thumbrating/general/thumbRating.xhtml
@@ -1,21 +1,22 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:c="http://java.sun.com/jsp/jstl/core" >
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-1col.xhtml">
 
-	<h:form>
-		<aui:thumbRating value="#{ratingModelBean.like}" label="Liferay Faces Alloy, in general, is: ">
-			<f:selectItem itemLabel="liked" itemValue="true" />
-			<f:selectItem itemLabel="disliked" itemValue="false" />
-		</aui:thumbRating>
-		<br />
-		<h:outputText value="#{i18n['model-value']}: " /><h:outputText value="#{ratingModelBean.like}" />
-		<br />
-		<br />
-		<h:commandButton value="Submit">
-			<f:ajax execute="@form" render="@form" />
-		</h:commandButton>
-	</h:form>
+	<ui:define name="col1">
+		<h:form>
+			<aui-nongen:field label="#{i18n['component']}">
+				<aui:thumbRating value="#{thumbRatingModelBean.like}" label="Liferay Faces Alloy, in general, is: ">
+					<f:selectItem itemLabel="liked" itemValue="true" />
+					<f:selectItem itemLabel="disliked" itemValue="false" />
+				</aui:thumbRating>
+			</aui-nongen:field>
+			<h:commandButton value="Submit">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<aui-nongen:field label="#{i18n['model-value']}">
+				<pre>#{thumbRatingModelBean.like}</pre>
+			</aui-nongen:field>
+		</h:form>
+	</ui:define>
 </ui:composition>
