--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/data-model/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/data-model/starRating.xhtml
@@ -11,7 +11,7 @@
 						itemLabel="#{benefit.label}" />
 				</aui:starRating>
 			</aui-nongen:field>
-			<h:commandButton action="#{starRatingBackingBean.submit}" value="Submit">
+			<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
 			<aui-nongen:field label="#{i18n['model-value']}">
