--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/default-value/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/default-value/starRating.xhtml
@@ -18,7 +18,7 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</aui:starRating>
 			</aui-nongen:field>
-			<h:commandButton action="#{starRatingBackingBean.submit}" value="Submit">
+			<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
 			<aui-nongen:field label="#{i18n['model-value']}">
@@ -42,7 +42,7 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</aui:starRating>
 			</aui-nongen:field>
-			<h:commandButton action="#{starRatingBackingBean.submit}" value="Submit">
+			<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
 			<aui-nongen:field label="#{i18n['model-value']}">
