FACES-1714 Develop Liferay Faces Showcase (Fixed package names in i18n.properties. Replaced <pre> tags with <showcase:outputModel> composite components to ensure that model output is formatted correctly. Removed <showcase:outputModel> tags from example code. Fixed datePicker Multiple Selection bug by changing the date seperator from ", " to " | ". Moved dateSeperator to first example.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/aceeditor/general/aceEditor.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/aceeditor/general/aceEditor.xhtml
@@ -24,7 +24,9 @@
 			<f:ajax execute="@form" render="@form" />
 		</h:commandButton>
 		<aui-nongen:field id="modelValue" label="#{i18n['model-value']}">
-			<pre>#{aceEditorModelBean.text}</pre>
+			<showcase:outputModel>
+				<h:outputText value="#{aceEditorModelBean.text}" />
+			</showcase:outputModel>
 		</aui-nongen:field>
 	</h:form>
 
