--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/datepicker/min-max-date/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/datepicker/min-max-date/datePicker.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
 	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
 
 	<ui:define name="col1">
