FACES-1714 Develop Liferay Faces Showcase (improved wording of portlet: examples)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/namespace/general/namespace.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/namespace/general/namespace.xhtml
@@ -7,7 +7,7 @@
 		<aui-nongen:field label="#{i18n['example-1']}">
 			<h:outputText value="#{i18n['portlet-namespace-general-example-1']}" />
 		</aui-nongen:field>
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
+		<aui-nongen:field label="#{i18n['component']}">
 			<portlet:namespace var="portletNamespace" />
 			<h:outputText value="portletNamespace=#{portletNamespace}" />
 		</aui-nongen:field>
@@ -18,7 +18,7 @@
 		<aui-nongen:field label="#{i18n['example-2']}">
 			<h:outputText value="#{i18n['portlet-namespace-general-example-2']}" />
 		</aui-nongen:field>
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
+		<aui-nongen:field label="#{i18n['component']}">
 			<h:outputText value="portletNamespace=" />
 			<portlet:namespace />
 		</aui-nongen:field>
