--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
 
 	<ui:define name="col1">
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
+		<aui-nongen:field label="#{i18n['example']}">
 			<portlet:renderURL var="renderURL">
 				<portlet:param name="foo" value="bar" />
 			</portlet:renderURL>
