--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/resourceurl/general/resourceURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/resourceurl/general/resourceURL.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
 
 	<ui:define name="col1">
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
+		<aui-nongen:field label="#{i18n['example']}">
 			<portlet:resourceURL var="resourceURL">
 				<portlet:param name="javax.faces.resource" value="liferay-faces-logo.png" />
 				<portlet:param name="ln" value="images" />
