FACES-1714 Develop Liferay Faces Showcase (improved portlet:actionURL)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/actionurl/general/actionURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/actionurl/general/actionURL.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<aui-nongen:field label="#{i18n['example']}">
 			<portlet:actionURL var="actionURL">
-				<portlet:param name="foo" value="bar" />
+				<portlet:param name="foo" value="1234" />
 			</portlet:actionURL>
 			<form action="#{actionURL}" method="post">
 				<input type="submit" value="#{i18n['submit-non-faces-postback']}" />
