FACES-1714 Develop Liferay Faces Showcase (added bridge:inputFile)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -1,3 +1,11 @@
+.aui .files table {
+	float: right;
+}
+
+.aui .files td, .aui .files th {
+	padding: 6px;
+}
+
 .aui hr {
 	border-top: 1px solid #cfcfcf;
 	margin-top: 10px;
